--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build, Push, and Deploy Docker Images to AWS ECR
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-push:
